--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -126,7 +126,7 @@ jobs:
         if: inputs.skipJavaSdk == false
         uses: pulumi/pulumi-package-publisher@696a0fe98f86d86ada2a842d1859f3e8c40d6cd7 # v0.0.21
         with:
-          sdk: all,!java
+          sdk: nodejs,!java
           version: ${{ inputs.version }}
       - name: Publish SDKs (except Java)
         if: inputs.skipJavaSdk == true
